@@ -1,3 +1,8 @@
++ JsCoq 0.6 "BunnyBunny"
+--------------------------------
+
+  - JSON/sexp serialization of Constr_uctions.
+
 + JsCoq 0.5 "Alexandria"
 --------------------------------
 
